# GitBlocks

./: AUTHORS  CHECKLIST.txt  ChangeLog  GitBlocks-win32.cbp  GitBlocks.cbp  Makefile.am  README  bootstrap  config.h.in  configure  configure.ac  manifest.xml
include/: CloneDialog.h  CommitAllDialog.h  CommitDialog.h  Common.h  ConfigPanel.h  CredentialsDialog.h  GitBlocks.h  NewBranchDialog.h  RemoveDialog.h  RenameDialog.h  SwitchBranchDialog.h
src/: CloneDialog.cpp  CommitAllDialog.cpp  CommitDialog.cpp  ConfigPanel.cpp  CredentialsDialog.cpp  GitBlocks.cpp  NewBranchDialog.cpp  RemoveDialog.cpp  RenameDialog.cpp  SwitchBranchDialog.cpp
wxsmith/: CloneDialog.wxs  CommitAllDialog.wxs  CommitDialog.wxs  CredentialsDialog.wxs  NewBranchDialog.wxs  RemoveDialog.wxs  RenameDialog.wxs  SwitchBranchDialog.wxs
